3781: Fix up dropdown: match appearance of other buttons, tweak wording, remove min-width style (which was added for clippy, but has been affecting all dropdowns).

--- a/apps/workbench/app/assets/stylesheets/application.css.scss
+++ b/apps/workbench/app/assets/stylesheets/application.css.scss
@@ -204,14 +204,6 @@ table.table-fixed-header-row tbody {
     top:1.5em;
 }
 
-/* Setting the height needs to be fixed with javascript. */
-.dropdown-menu {
-    padding-right: 20px;
-    max-height: 440px;
-    width: 400px;
-    overflow-y: auto;
-}
-
 .row-fill-height, .row-fill-height>div[class*='col-'] {
     display: flex;
 }
